--- a/new-page/index.html
+++ b/new-page/index.html
@@ -8,14 +8,14 @@
 
         <!-- title and favicon -->
         <title>User Auth</title>
-        <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="../assets/alchemy-favicon.png" />
 
         <!-- js -->
         <script
             defer
             src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
         ></script>
-        <script type="module" src="app.js"></script>
+        <script type="module" src="new-page.js"></script>
 
         <!-- fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,21 +26,21 @@
         />
 
         <!-- css -->
-        <link rel="stylesheet" href="styles/reset.css" />
-        <link rel="stylesheet" href="styles/global.css" />
+        <link rel="stylesheet" href="../styles/reset.css" />
+        <link rel="stylesheet" href="../styles/global.css" />
         <!-- add link for page specific css -->
     </head>
 
     <body>
         <header class="page-header">
-            <img class="logo" src="assets/avatar.jpeg" alt="logo" />
+            <img class="logo" src="../assets/avatar.jpeg" alt="logo" />
             <p class="title">User Auth</p>
             <nav>
-                <a href="/new-page/index.html">New Page</a>
+                <a href="../">Home</a>
                 <a id="sign-out-link" href="auth">Sign Out</a>
             </nav>
         </header>
 
-        <main>This is the home page</main>
+        <main>This is the new page</main>
     </body>
 </html>
