--- a/auth/index.html
+++ b/auth/index.html
@@ -10,7 +10,7 @@
             defer
             src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
         ></script>
-        <script type="module" src="app.js"></script>
+        <script type="module" src="auth.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +21,8 @@
 
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/global.css" />
+        <link rel="stylesheet" href="../styles/form.css" />
+
         <title>Auth</title>
     </head>
 
@@ -41,7 +43,7 @@
                     Password
                     <input type="password" name="password" required />
                 </label>
-                <button></button>
+                <button>Submit</button>
                 <p class="error"></p>
                 <a href="./">do other thing</a>
             </form>
